# deno-shell

./: .gitignore  Cargo.toml  README.md  deno.jsonc  deps.ts  mod.ts
examples/: exec.ts
src/: bindings.rs  ffi.ts
